--- a/Accounts/templates/dashboard.html
+++ b/Accounts/templates/dashboard.html
@@ -61,7 +61,7 @@
 <body>
     <div class="panel">
         <ul>
-            <li><a href="/clients/add">Add Client</a></li>
+            <li><a href="{% url 'client' %}">Add Client</a></li>
             <li><a href="/clients/delete">Delete Client</a></li>
             <li><a href="/clients/update">Update Client</a></li>
         </ul>
