Update client Flow

--- a/Accounts/templates/dashboard.html
+++ b/Accounts/templates/dashboard.html
@@ -63,7 +63,7 @@
         <ul>
             <li><a href="{% url 'clients:client' %}">Add Client</a></li>
             <li><a href="{% url 'clients:delete_clients' %}">Delete Client</a></li>
-            <li><a href="/clients/update">Update Client</a></li>
+            <li><a href="{% url 'clients:update_client' %}">Update Client</a></li>
         </ul>
     </div>
     <div class="center-content">
